# Tax_Optimizer

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  action_report.md  demo.html  pyproject.toml  retirement_planning_demo.ipynb  tax_optimizer.py  tax_optimizer_standalone.ipynb
.claude/: settings.local.json
dash_app/: __init__.py  __main__.py  app.py  figures.py  forms.py  layout.py  prod.py  report_builder.py  runner.py  state.py
dash_app/assets/: fira-code.css
docs/: annuity_guide.md  architecture.md  dashboard.md  market_models.md  modeling_guide.md  references.md  roth_conversion.md  scenario_guide.md
reports/: action_report.html  action_report_2026-05-04_191214.md  action_report_2026-05-06_155831.md  action_report_2026-05-06_160402.md  action_report_2026-05-08_215055.md
scenarios/: README.md  example.json  example01.json  example02.json  example_annuity_nonqualified.json  example_pension_lump_sum.json  example_single.json  template.json
tax_optimizer/: __init__.py  __main__.py  annuity.py  config.py  conversion.py  inputs.py  ira.py  limits.py  market.py  metrics.py  monte_carlo.py  mortality.py  optimizer.py  payroll.py  pension.py  plots.py  render.py  report.py  results.py  rmd.py  scenario.py  sensitivity.py  simulator.py  spending.py  state.py  withdrawals.py
tax_optimizer/tax/: __init__.py  federal.py  irmaa.py  regimes.py  state.py
tests/: conftest.py  test_annuity_helpers.py  test_cli_cross_model.py  test_conversion_liquidity_v65.py  test_dash_field_schema_drift.py  test_dash_figure_font.py  test_dash_figures_annuity_fica.py  test_dash_form_help.py  test_dash_form_inputs.py  test_dash_household_kind.py  test_dash_mc_histogram.py  test_dash_overview_growth.py  test_dash_prod_entrypoint.py  test_dash_report_download.py  test_dash_runner_objective.py  test_dash_save_roundtrip.py  test_dash_strategy_bars.py  test_dash_strategy_compare.py  test_dash_taxes_multi.py  test_dash_yearly_table.py  test_estate_phantom_spend.py  test_health_premiums_v66.py  test_limits.py  test_market_models.py  test_mega_backdoor_spillover_v66.py  test_metrics_growth.py  test_mortality.py  test_payroll_sdi.py  test_pension.py  test_phased_retirement_cashflow.py  test_report_lifetime_events.py  test_report_ra.py  test_report_rb.py  test_report_rc.py  test_report_rd.py  test_report_year_scope.py  test_review_fixes.py  test_rmd.py  test_roth_401k_cashflow_v67.py  test_scenario.py  (+14 more)
